--- a/package.json
+++ b/package.json
@@ -11,19 +11,14 @@
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.2",
-    "@react-three/fiber": "^9.5.0",
-    "framer-motion": "^12.34.3",
-    "lucide-react": "^0.575.0",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "three": "^0.183.1"
+    "react-dom": "^19.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
-    "@types/three": "^0.183.1",
     "@vitejs/plugin-react": "^5.1.1",
     "autoprefixer": "^10.4.20",
     "daisyui": "^5.5.19",
