--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,7 @@
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
   "rewrites": [
+    { "source": "/api/:path*", "destination": "/api/:path*" },
     { "source": "/((?!api|img|.*\\..*|_next).*)", "destination": "/index.html" }
   ],
   "headers": [
